<resources>
    <string name="app_name">Food Cost Calculator</string>
    <string name="description_per_kilogram">Piece weight as kilogram</string>
    <string name="description_per_gram">Piece weight as gram</string>
    <string name="description_per_pound">Piece weight as pound</string>
    <string name="description_per_ounce">Piece weight as ounce</string>
    <string name="description_per_liter">Piece volume as liter</string>
    <string name="description_per_milliliter">Piece volume as ml</string>
    <string name="description_per_gallon">Piece volume as gallon</string>
    <string name="description_default">Piece volume as fl ounce</string>
    <string name="abbreviation_per_piece">pce</string>
    <string name="abbreviation_per_kilogram">kg</string>
    <string name="abbreviation_per_gram">g</string>
    <string name="abbreviation_per_pound">lb</string>
    <string name="abbreviation_per_ounce">oz</string>
    <string name="abbreviation_per_liter">l</string>
    <string name="abbreviation_per_milliliter">ml</string>
    <string name="abbreviation_per_gallon">gal</string>
    <string name="abbreviation_default">fl oz</string>
    <string name="abbreviation_piece">pce</string>
    <string name="abbreviation_kilogram">kg</string>
    <string name="abbreviation_gram">g</string>
    <string name="abbreviation_pound">lb</string>
    <string name="abbreviation_ounce">oz</string>
    <string name="abbreviation_liter">l</string>
    <string name="abbreviation_milliliter">ml</string>
    <string name="abbreviation_gallon">gal</string>
    <string name="weight">weight</string>
    <string name="volume">volume</string>
    <string name="piece">piece</string>
    <string name="unit_per_format">(per %1$s)</string>
    <string name="unit_gram">Gram</string>
    <string name="unit_kilogram">Kilogram</string>
    <string name="unit_pound">Pound</string>
    <string name="unit_ounce">Ounce</string>
    <string name="unit_milliliter">Milliliter</string>
    <string name="unit_liter">Liter</string>
    <string name="unit_fluid_ounce">Fluid Ounce</string>
    <string name="unit_gallon">Gallon</string>
    <string name="unit_piece">Piece</string>
    <string name="symbol_gram">g</string>
    <string name="symbol_kilogram">kg</string>
    <string name="symbol_pound">lb</string>
    <string name="symbol_ounce">oz</string>
    <string name="symbol_milliliter">ml</string>
    <string name="symbol_liter">l</string>
    <string name="symbol_fluid_ounce">fl oz</string>
    <string name="symbol_gallon">gal</string>
    <string name="symbol_piece">pcs</string>
    <string name="unit_category_weight">Weight</string>
    <string name="unit_category_volume">Volume</string>
    <string name="unit_category_count">Count</string>
    <string name="unit_not_selected">Select unit</string>
    <string name="empty_dish_list_content_title">Let\'s get cooking</string>
    <string name="empty_dish_list_content_description">Tap button below to add your first dish and start building your menu magic.</string>
    <string name="empty_product_list_content_title">Stock the pantry with ingredients</string>
    <string name="empty_product_list_content_description">Tap button below to add some ingredients so you’ve got something to cook with!</string>
    <string name="empty_half_product_list_content_title">Prep like a pro</string>
    <string name="empty_half_product_list_content_description">Create reusable parts like sauces or dough to speed things up later.</string>
    <string name="cd_icon_products">Ingredients icon</string>
    <string name="cd_icon_half_products">Bakery preparation icon</string>
    <string name="cd_icon_dishes">Restaurant plate icon</string>
    <string name="products">Ingredients</string>
    <string name="half_products">Half Products</string>
    <string name="dishes">Dishes</string>
    <string name="navigate_to">navigate to %1$s</string>
    <string name="undo">Undo</string>
    <string name="description">Description</string>
    <string name="edit_quantity">Edit quantity</string>
    <string name="edit_name">Edit name</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="add_items">Add Items</string>
    <string name="expanded">Expanded</string>
    <string name="collapsed">Collapsed</string>
    <string name="margin">Margin</string>
    <string name="tax">Tax</string>
    <string name="confirm">Confirm</string>
    <string name="okay">Okay</string>
    <string name="done">Done</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="half_product">Half Product</string>
    <string name="product">Ingredient</string>
    <string name="select_product">Select ingredient</string>
    <string name="select_half_product">Select half product</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="purchase_unit">Purchase unit</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="formatted_quantity">%1$s %2$s</string>
    <string name="ad_attribution">Ad</string>
    <string name="search_by_name">Search…</string>
    <string name="cancel_search">cancel search</string>
    <string name="search_bar">search bar</string>
    <string name="product_netto_price">Price %1$s netto: %2$s.</string>
    <string name="product_foodcost_price">Price %1$s with foodcost: %2$s.</string>
    <string name="netto_price">Net price</string>
    <string name="total_price">Gross price</string>
    <string name="content_description_create_product">Create ingredient</string>
    <string name="create_product">Create ingredient</string>
    <string name="product_name">Ingredient name</string>
    <string name="price">Price</string>
    <string name="tax_percent">Tax %</string>
    <string name="percent_of_waste">% of waste (optional)</string>
    <string name="count_waste">Get waste</string>
    <string name="count_piece_price">Unit price</string>
    <string name="quantity_before_processing">Quantity before processing</string>
    <string name="waste_quantity">Waste quantity</string>
    <string name="calculate_price_per_piece">Calculate price per piece</string>
    <string name="box_price">Box price</string>
    <string name="box_quantity">Units in box</string>
    <string name="content_description_remove_product">remove ingredient</string>
    <string name="values_per_unit">Values per %1$s</string>
    <string name="package_values">Package values per %1$s</string>
    <string name="package_price">Package price</string>
    <string name="package_quantity">Package quantity %1$s</string>
    <string name="package_quantity_empty">Package quantity</string>
    <string name="create_half_product">Create half product</string>
    <string name="price_per_unit">Price per %1$s</string>
    <string name="price_per_recipe">Price per recipe</string>
    <string name="recipe_per_quantity">Recipe per %1$s %2$s of product</string>
    <string name="content_description_create_half_product">Create half product</string>
    <string name="tip">Tip</string>
    <string name="half_product_tip_content">To get the most accurate results, use the same unit as the half product. If you mix weight and volume, products will be converted to the half product unit using the density of water at 4°C.</string>
    <string name="content_description_half_product_tip">half product tip</string>
    <string name="content_description_remove_half_product">remove half product</string>
    <string name="half_product_unit">Recipe unit</string>
    <string name="edit_displayed_servings">Edit displayed servings</string>
    <plurals name="portions">
        <item quantity="one">%d Portion</item>
        <item quantity="other">%d Portions</item>
    </plurals>
    <string name="margin_value">%1$s \%%</string>
    <string name="tax_value">%1$s \%%</string>
    <string name="food_cost">Food cost</string>
    <string name="total_cost">Total cost</string>
    <string name="final_price">Final price</string>
    <string name="app_icon">app icon</string>
    <string name="content_description_create_dish">Create dish</string>
    <string name="create_dish">Create Dish</string>
    <string name="add_product">Add Ingredient</string>
    <string name="add_half_product">Add Half Product</string>
    <string name="item_added">%1$s added</string>
    <string name="copy">copy</string>
    <string name="copy_dish">Duplicate Dish</string>
    <string name="copy_dish_prefilled_name">%1$s Copy</string>
    <string name="more_options">More Options</string>
    <string name="removed_item">Removed %1$s</string>
    <string name="add_product_with_name">Add Ingredient: %1$s</string>
    <string name="add_half_product_with_name">Add Half Product: %1$s</string>
    <string name="create_new_product">Create new ingredient</string>
    <string name="create_new_product_placeholder">Create ingredient \'%1$s\'</string>
    <string name="add_component">Add Component</string>
    <string name="add_component_hint">Add a component to your dish</string>
    <string name="no_suggestions">Nothing found… Don\'t worry you can create it right here!</string>
    <string name="start_typing_to_see_suggestions">Start typing to see suggestions</string>
    <string name="find_an_ingredient">Find an ingredient</string>
    <string name="start_typing_to_search_or_create">Start typing to search or create.</string>
    <string name="no_results_for">No results for "%1$s"</string>
    <string name="search_or_create_component">Search or create component</string>
    <string name="search_or_create_component_hint">Component name</string>
    <string name="matching_half_products">Matching half products</string>
    <string name="matching_ingredients">Matching ingredients</string>
    <string name="error_failed_to_add_component">Failed to add component. Please try again.</string>
    <string name="delete_item_title">Delete \'%1$s\'?</string>
    <string name="delete_confirmation_message">Are you sure you want to permanently delete this item?</string>
    <string name="delete">Delete</string>
    <string name="save_default_settings_title">Save as Default?</string>
    <string name="save_default_settings_message">Would you like to save your margin (%1$s%%) and tax (%2$s%%) values as defaults for future dishes?</string>
    <string name="save_as_default">Save as Default</string>
    <string name="no_thanks">No Thanks</string>
    <string name="save_changes_title">Save Changes?</string>
    <string name="unsaved_changes_message">You have unsaved changes. Do you want to save them before leaving?</string>
    <string name="discard">Discard</string>
    <string name="remove_dish">Delete Dish</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_button_title">Recipe</string>
    <string name="time_title">Time</string>
    <string name="prep_time">Prep Time (minutes)</string>
    <string name="prep_time_title">Prep Time</string>
    <string name="prep_time_value">%1$s min</string>
    <string name="cook_time">Cook Time (minutes)</string>
    <string name="cook_time_title">Cook Time</string>
    <string name="cook_time_value">%1$s min</string>
    <string name="general_info_title">General</string>
    <string name="tips">Tips</string>
    <string name="steps_title">Steps</string>
    <string name="step_number">%1$s.</string>
    <string name="cancel">Cancel</string>
    <string name="not_specified">Not specified</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="dish_name">Dish name</string>
    <string name="use_metric_units">Use metric units</string>
    <string name="use_us_units">Use imperial units</string>
</resources>