<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:gravity="center"
    style="@style/Theme.AppCompat.DayNight.Dialog"
    android:orientation="vertical"
    android:background="@drawable/border">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dish_name_layout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/dish_name"
            app:hintTextColor="@color/black"
            app:counterTextColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/orange_500"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_dish_name"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"
                android:inputType="text"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>




    <LinearLayout
        android:id="@+id/linear_layout_dish_margin_and_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dish_name_layout"
        android:layout_gravity="center_horizontal">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="1dp"

            android:hint="@string/dish_margin"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/orange_500"
            app:counterTextColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_dish_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:gravity="center_horizontal"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/tax"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/orange_500"
            app:counterTextColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_dish_tax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:gravity="center_horizontal"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_products_in_dish"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_dish_margin_and_tax"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_buttons"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_dish_changes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:padding="8dp"
            android:layout_margin="4dp"
            android:textColor="@color/white"
            android:text="@string/save"
            tools:ignore="ButtonStyle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_dish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/delete"
            android:background="@drawable/button_gradient"
            android:padding="8dp"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>