<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="330dp"
    android:layout_gravity="center"
    style="@style/Theme.AppCompat.DayNight.Dialog"
    android:background="@drawable/border"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            app:hintTextColor="@color/black"
            app:counterTextColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/orange_500"
            android:gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_product_name"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"
                tools:text="dish name"
                android:inputType="text"
                android:layout_gravity="center_horizontal"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/unit_spinner"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:boxStrokeColor="@color/orange_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/spinner_edit_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:inputType="none"
                android:spinnerMode="dropdown" />
        </com.google.android.material.textfield.TextInputLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            app:hintTextColor="@color/black"
            app:counterTextColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/orange_500"
            android:gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_product_price"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"
                tools:text="dish name"
                android:inputType="numberDecimal"
                android:layout_gravity="center_horizontal"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/tax"
            app:hintTextColor="@color/black"
            app:counterTextColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/orange_500"
            android:gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_product_tax"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"
                tools:text="dish tax"
                android:inputType="numberDecimal"
                android:layout_gravity="center_horizontal"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"

        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/waste"
            app:hintTextColor="@color/black"
            app:counterTextColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_gravity="center_horizontal"
            app:boxStrokeColor="@color/orange_500"
            android:gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_product_waste"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="match_parent"
                tools:text="dish waste"
                android:inputType="numberDecimal"
                android:layout_gravity="center_horizontal"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/save_changes_button"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_gradient"
            android:padding="8dp"
            android:textColor="@color/white"
            android:text="@string/save"
            app:cornerRadius="16dp" />


        <Button
            android:id="@+id/delete_product_button"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:background="@drawable/button_gradient"
            app:cornerRadius="32dp" />

    </LinearLayout>
</LinearLayout>
