<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/background"
  android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="12dp"
    >

    <LinearLayout
      android:id="@+id/linearLayout6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="24dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Default dish tax"
        android:textStyle="bold" />

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Tax %"
        app:boxStrokeColor="@color/orange_500"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/default_dish_tax_edit_text"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="end"
          android:inputType="numberDecimal"
          android:maxLength="5" />
      </com.google.android.material.textfield.TextInputLayout>

      <Space
        android:layout_width="12dp"
        android:layout_height="12dp" />

      <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Default dish margin"
        android:textStyle="bold" />

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Margin %"
        app:boxStrokeColor="@color/orange_500"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/default_margin_edittext"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="end"
          android:inputType="numberDecimal"
          android:maxLength="5" />
      </com.google.android.material.textfield.TextInputLayout>


      <TextView
        android:id="@+id/units_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Units"
        android:textStyle="bold" />

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/use_metric_units"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
          android:id="@+id/checkBoxMetric"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      </androidx.constraintlayout.widget.ConstraintLayout>


      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/use_us_units"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
          android:id="@+id/checkBoxUS"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Default currency"
        android:textStyle="bold"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        />

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Choose currency"
        android:textColorHint="@color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:boxStrokeColor="@color/orange_500">

      <AutoCompleteTextView
        android:id="@+id/unit_spinner_create_half_product"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/save_settings_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginEnd="12dp"
      android:layout_marginBottom="24dp"
      android:background="@drawable/button_gradient"
      android:text="@string/save"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
